# neteval

./: CMakeLists.txt  Dockerfile  exec-valgrind.sh  main.cpp
